# Gmail-auto

./: .gitignore  FUTURE_UPDATES.md  MAINTENANCE.md  README.md  pyproject.toml  requirements.txt
src/gmail_auto_v2/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  gmail_client.py  notification_popup.py  notifier.py  parser.py  prompt.py  push_state.py  storage.py
